# KillSD

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codex/environments/: environment.toml
artifacts/benchmark-api-primary__api__seed_101__try_1/: orchestrator_state.json
artifacts/benchmark-api-primary__api__seed_101__try_2/: orchestrator_state.json
artifacts/benchmark-api-replay__api__seed_101__try_1/: orchestrator_state.json
artifacts/benchmark-api-replay__api__seed_101__try_2/: orchestrator_state.json
artifacts/benchmark-manual-primary__manual__seed_101__try_1/: orchestrator_state.json
artifacts/benchmark-manual-primary__manual__seed_101__try_2/: orchestrator_state.json
artifacts/real_item_001_ci/: real_item_state.json
artifacts/real_item_001_final/: real_item_state.json
artifacts/sample-render-fixture/: orchestrator_state.json
artifacts/smoke-api/: orchestrator_state.json
artifacts/smoke-api-validator/: orchestrator_state.json
artifacts/smoke-draft/: orchestrator_state.json
artifacts/smoke-manual/: orchestrator_state.json
artifacts/smoke-plan/: orchestrator_state.json
config/: similarity_thresholds.json
csat_math_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: bootstrap.md  curated_batch_schema.md  curation_workflow.md  open_source_boundary.md  release_checklist.md  validator_failure_taxonomy.md
exam_specs/: csat_math_2028.yaml
scripts/: build_candidate_pool.py  export_review_packet.py  import_review_labels.py  init_curated_batch.py  reindex_artifacts.py  release_checklist.sh  report_coverage_gaps.py  reset_runtime_state.py  run_benchmark.py  run_generated_exam.py  run_generated_mini_alpha.py  run_mini_alpha.py  run_real_item.py  validate_curated_batches.py
src/: __init__.py
src/api/: app.py
src/assembly/: __init__.py  candidate_pool.py  exam_assembler.py  mini_alpha.py  orderer.py
src/cli/: main.py
src/config/: settings.py
src/core/: specs.py  (+4 more)
tests/: test_artifact_portability.py  test_candidate_pool.py  test_curation_workbench.py  test_discard_feedback_loop.py  test_distill_cli.py  test_distill_pipeline.py  test_e2e_api_mode.py  test_e2e_manual_mode.py  test_exam_spec.py  test_family_coverage_report.py  test_family_registry.py  test_generated_exam.py  test_generated_exam_selection.py  test_mcq_answer_key_format.py  test_mini_alpha.py  test_mock_provider.py  test_openai_provider.py  test_orchestrator.py  test_plugin_registry.py  test_real_item_gauntlet.py  test_release_surface.py  test_render.py  test_render_contracts.py  test_review_ingestion.py  test_schemas.py  test_validator_regressions.py  test_validators.py
var/: app.db
(+5951 files in other folders)
